; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/sja1105/extr_sja1105_static_config.c_sja1105_vlan_lookup_entry_packing.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/sja1105/extr_sja1105_static_config.c_sja1105_vlan_lookup_entry_packing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sja1105_vlan_lookup_entry = type { i32, i32, i32, i32, i32, i32 }

@SJA1105_SIZE_VLAN_LOOKUP_ENTRY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sja1105_vlan_lookup_entry_packing(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.sja1105_vlan_lookup_entry*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* @SJA1105_SIZE_VLAN_LOOKUP_ENTRY, align 8
  store i64 %9, i64* %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.sja1105_vlan_lookup_entry*
  store %struct.sja1105_vlan_lookup_entry* %11, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load %struct.sja1105_vlan_lookup_entry*, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %14 = getelementptr inbounds %struct.sja1105_vlan_lookup_entry, %struct.sja1105_vlan_lookup_entry* %13, i32 0, i32 5
  %15 = load i64, i64* %7, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @sja1105_packing(i8* %12, i32* %14, i32 63, i32 59, i64 %15, i32 %16)
  %18 = load i8*, i8** %4, align 8
  %19 = load %struct.sja1105_vlan_lookup_entry*, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %20 = getelementptr inbounds %struct.sja1105_vlan_lookup_entry, %struct.sja1105_vlan_lookup_entry* %19, i32 0, i32 4
  %21 = load i64, i64* %7, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @sja1105_packing(i8* %18, i32* %20, i32 58, i32 54, i64 %21, i32 %22)
  %24 = load i8*, i8** %4, align 8
  %25 = load %struct.sja1105_vlan_lookup_entry*, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %26 = getelementptr inbounds %struct.sja1105_vlan_lookup_entry, %struct.sja1105_vlan_lookup_entry* %25, i32 0, i32 3
  %27 = load i64, i64* %7, align 8
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @sja1105_packing(i8* %24, i32* %26, i32 53, i32 49, i64 %27, i32 %28)
  %30 = load i8*, i8** %4, align 8
  %31 = load %struct.sja1105_vlan_lookup_entry*, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %32 = getelementptr inbounds %struct.sja1105_vlan_lookup_entry, %struct.sja1105_vlan_lookup_entry* %31, i32 0, i32 2
  %33 = load i64, i64* %7, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @sja1105_packing(i8* %30, i32* %32, i32 48, i32 44, i64 %33, i32 %34)
  %36 = load i8*, i8** %4, align 8
  %37 = load %struct.sja1105_vlan_lookup_entry*, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %38 = getelementptr inbounds %struct.sja1105_vlan_lookup_entry, %struct.sja1105_vlan_lookup_entry* %37, i32 0, i32 1
  %39 = load i64, i64* %7, align 8
  %40 = load i32, i32* %6, align 4
  %41 = call i32 @sja1105_packing(i8* %36, i32* %38, i32 43, i32 39, i64 %39, i32 %40)
  %42 = load i8*, i8** %4, align 8
  %43 = load %struct.sja1105_vlan_lookup_entry*, %struct.sja1105_vlan_lookup_entry** %8, align 8
  %44 = getelementptr inbounds %struct.sja1105_vlan_lookup_entry, %struct.sja1105_vlan_lookup_entry* %43, i32 0, i32 0
  %45 = load i64, i64* %7, align 8
  %46 = load i32, i32* %6, align 4
  %47 = call i32 @sja1105_packing(i8* %42, i32* %44, i32 38, i32 27, i64 %45, i32 %46)
  %48 = load i64, i64* %7, align 8
  ret i64 %48
}

declare dso_local i32 @sja1105_packing(i8*, i32*, i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
